final question answered

--- a/regression_analysis.ipynb
+++ b/regression_analysis.ipynb
@@ -762,7 +762,7 @@
    "source": [
     "**Question:** Does this model perform better or worse on out-of-sample data as compared to in-sample data?\n",
     "\n",
-    "**Answer:** YOUR ANSWER HERE"
+    "**Answer:** For this forecase, the RMSE is lower for out of sample performance, meaning it is better with a less error and values closer to the actual values of regression"
    ]
   },
   {
